--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,8 @@
 {
   "extends": [
-    "eslint:recommended",
-    "react-app",
-    "plugin:react/recommended",
-    "plugin:jest/recommended"
+    "eslint:recommended"
+    // "react-app",
+    // "plugin:react/recommended"
   ],
   "env": {
     "es6": true,
@@ -20,6 +19,7 @@
     "sourceType": "module"
   },
   "rules": {
+    "no-undef": "off",
     "no-console": "off",
     "no-unused-vars": "off",
     "react/prop-types": "off",
