--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,8 +34,11 @@ jobs:
         node: ['14', '16']
         os: [ubuntu-latest]
 
-    name: (Client) Node ${{ matrix.node }} on ${{ matrix.os }}
+    name: Node ${{ matrix.node }} on ${{ matrix.os }}
     steps:
+      - name: Create mongoDB Docker container
+        run: sudo docker run -d -p 27017:27017 mongo:latest
+
       - name: ♻️ Check out Git Repository
         uses: actions/checkout@v2
         with:
@@ -68,6 +71,12 @@ jobs:
       - name: ✅  Run tests
         run: npm run test -- --coverage
 
+      - name: 🧪 Upload coverage to Codecov
+        uses: codecov/codecov-action@v2
+        with:
+          # token: ${{ secrets.CODECOV_TOKEN }}
+          directory: ./coverage/coverage-final.json
+
     # services:
     #   mongodb:
     #       image: mongo
@@ -82,8 +91,3 @@ jobs:
     #         --health-retries 5
     #       ports:
     #         - 27017:27017
-
-    # - name: Create mongoDB Docker container
-    #    # run: sudo docker run -d -p 27017:27017 mongo:latest
-    #    ....
-    # - name: ♻️ Check out Git Repository
