--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -5,9 +5,9 @@ on:
     branches:
       - '*'
       - '!main'
-  pull_request:
-    branches:
-      - main
+  # pull_request:
+  #   branches:
+  #     - main
 
 env:
   CI: true
@@ -86,8 +86,3 @@ jobs:
     #         --health-retries 5
     #       ports:
     #         - 27017:27017
-
-    # - name: Create mongoDB Docker container
-    #    # run: sudo docker run -d -p 27017:27017 mongo:latest
-    #    ....
-    # - name: ♻️ Check out Git Repository
