--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,10 +73,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: 🌪️ Publish to coveralls.io
+        if: "contains(${{ matrix.node }}, 16)"
         uses: coverallsapp/github-action@v1.1.2
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          parallel-finished: true
+          # parallel-finished: true
 
     # services:
     #   mongodb:
