--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,12 +68,11 @@ jobs:
       - name: ✅  Run tests
         run: npm run test -- --coverage
 
-      - name: 🧪 Upload coverage to Codecov
+      - name: 🌪️ Publish to coveralls.io
         if: "contains(${{ matrix.node }}, 16)"
-        uses: codecov/codecov-action@v2
+        uses: coverallsapp/github-action@v1.1.2
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          directory: ./coverage/coverage-final.json
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
     # services:
     #   mongodb:
