--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 
 env:
   CI: true
@@ -74,17 +77,17 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
-    # services:
-    #   mongodb:
-    #       image: mongo
-    #       env:
-    #         MONGO_INITDB_ROOT_USERNAME: test
-    #         MONGO_INITDB_ROOT_PASSWORD: password
-    #         MONGO_INITDB_DATABASE: test
-    #       options: >-
-    #         --health-cmd mongo
-    #         --health-interval 10s
-    #         --health-timeout 5s
-    #         --health-retries 5
-    #       ports:
-    #         - 27017:27017
+  build:
+    needs: ci
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Publish to Registry
+        uses: elgohr/Publish-Docker-Github-Action@master
+        with:
+          name: spencerlepine/woofer
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+
