--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,17 +77,9 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
-  build:
-    needs: ci
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-      - name: Publish to Registry
+      - name: Publish to Docker Registry
         uses: elgohr/Publish-Docker-Github-Action@master
         with:
           name: spencerlepine/woofer
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
-
