--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -5,9 +5,6 @@ on:
     branches:
       - '*'
       - '!main'
-  # pull_request:
-  #   branches:
-  #     - main
 
 env:
   CI: true
@@ -32,7 +29,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node: ['14', '16']
+        node: ['16']
         os: [ubuntu-latest]
 
     name: Node ${{ matrix.node }} on ${{ matrix.os }}
@@ -71,6 +68,11 @@ jobs:
 
       - name: ✅  Run tests
         run: npm run test -- --coverage
+
+      - name: 🌪️ Publish to coveralls.io
+        uses: coverallsapp/github-action@v1.1.2
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
     # services:
     #   mongodb:
