--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,8 +14,10 @@ env:
   REACT_APP_FIREBASE_APP_ID: asdf
   REACT_APP_FIREBASE_MEASUREMENT_ID: asdf
 
-jobs:
+on:
+  workflow_dispatch:
 
+jobs:
   test:
     runs-on: ${{ matrix.os }}
     strategy:
