--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,10 +14,11 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-      steps:
-        - name: 🐳 Publish to Docker Registry
-          uses: elgohr/Publish-Docker-Github-Action@master
-          with:
-            name: {inputs.DOCKER_USERNAME}/{inputs.DOCKER_REPO}
-            username: ${{ secrets.DOCKER_USERNAME }}
-            password: ${{ secrets.DOCKER_PASSWORD }}
+    name: Docker Upload
+    steps:
+      - name: 🐳 Publish to Docker Registry
+        uses: elgohr/Publish-Docker-Github-Action@master
+        with:
+          name: {inputs.DOCKER_USERNAME}/{inputs.DOCKER_REPO}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
