--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
-    name: Docker Publish
+    name: (Docker Publish)
     steps:
       - name: 🐳 Publish to Docker Registry
         uses: elgohr/Publish-Docker-Github-Action@master
