edit yml workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,13 +2,6 @@ name: deploy
 
 on:
   workflow_call:
-    inputs:
-      DOCKER_USERNAME:
-        required: true
-        type: string
-      DOCKER_REPO:
-        required: true
-        type: string
 
 jobs:
 
@@ -20,6 +13,6 @@ jobs:
       - name: 🐳 Publish to Docker Registry
         uses: elgohr/Publish-Docker-Github-Action@master
         with:
-          name: ${{ inputs.DOCKER_USERNAME }}/${{ inputs.DOCKER_REPO}}
+          name: ${{ INPUT_DOCKER_USERNAME }}/${{ INPUT_DOCKER_REPO}}
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
