--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,5 +13,5 @@ jobs:
   deploy:
     uses: ./.github/workflows/deploy.yml
     with:
-      DOCKER_USERNANE: spencerlepine
-      DOCKER_REPO: woofer
+      docker_username: spencerlepine
+      docker_repo: woofer
