edit yml workflow

--- a/.github/workflows/branch_check.yml
+++ b/.github/workflows/branch_check.yml
@@ -13,6 +13,6 @@ jobs:
 
   deploy-dev:
     uses: ./.github/workflows/deploy.yml
-    with:
+    env:
       docker_username: spencerlepine
       docker_repo: woofer-dev
