edit yml workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
 
   # Skip entire job based on secrets
   build:
-    needs: [check-registry-secrets]
+    needs: [check-github-secrets]
     if: needs.check-registry-secrets.outputs.have_secrets == 'true'
     runs-on: ubuntu-latest
 
