--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,42 +12,33 @@ jobs:
      have_secrets: ${{ steps.setvar.outputs.have_secrets }}
    steps:
      - id: setvar
-       # "${{ secrets.EC2_SSH_KEY }}" != "" && \
-       # "${{ secrets.EC2_REMOTE_HOST }}" != "" && \
-       # "${{ secrets.EC2_REMOTE_USER }}" != "" && \
        run: |
-         if [[ "${{ secrets.DOCKER_USERNAME }}" != "" && \
-               "${{ secrets.DOCKER_PASSWORD }}" != "" && \
-               "${{ secrets.DOCKERHUB_REPO }}" != "" ]]; \
+         if [[ "${{ secrets.EC2_SSH_KEY }}" != "" && \
+               "${{ secrets.EC2_REMOTE_HOST }}" != "" && \
+               "${{ secrets.EC2_REMOTE_USER }}" != "" ]]; \
          then
            echo "Secrets need to deploy were configured in the repo"
            echo "::set-output name=have_secrets::true"
+           run: exit 1
          else
            echo "Secrets need to deploy were not configured in the repo"
            echo "::set-output name=have_secrets::false"
+           run: exit 1
          fi
 
-
   # Skip entire job based on secrets
-  build:
+  deploy:
     needs: [check-github-secrets]
     if: needs.check-registry-secrets.outputs.have_secrets == 'true'
     runs-on: ubuntu-latest
 
-    name: (Docker Publish)
-    steps:
-      - name: 🐳 Publish to Docker Registry
-        uses: elgohr/Publish-Docker-Github-Action@master
-        with:
-          name: ${{ secrets.DOCKERHUB_REPO }}
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+  deploy:
+   needs: [build]
+   if: needs.check-registry-secrets.outputs.have_secrets == 'true'
+    runs-on: ubuntu-latest
 
-  # deploy:
-  #  needs: [build]
-  #  if: needs.check-registry-secrets.outputs.have_secrets == 'true'
-  #   runs-on: ubuntu-latest
-
+      - name: TODO
+        run: echo "TODO"
       # - name: Deploy to EC2 Server
       #   uses: easingthemes/ssh-deploy@main
       #   env:
