--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,10 @@ jobs:
   test:
     uses: ./.github/workflows/test.yml
 
-  deploy:
+  build:
     needs: [test]
+    uses: ./.github/workflows/build.yml
+
+  deploy:
+    needs: [build]
     uses: ./.github/workflows/deploy.yml
