--- a/.github/workflows/branch_check.yml
+++ b/.github/workflows/branch_check.yml
@@ -14,3 +14,7 @@ jobs:
   build:
     needs: [test]
     uses: ./.github/workflows/build.yml
+    secrets:
+      DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
+      DOCKER_HUB_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
+      DOCKER_HUB_REPO: ${{ secrets.DOCKER_HUB_REPO }}
