--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,6 +58,11 @@ jobs:
         with:
           persist-credentials: false
 
+      - name: 🔖 Set up Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node }}
+
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
