--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,6 +58,9 @@ jobs:
         with:
           persist-credentials: false
 
+      - name: Create placeholder env file
+        run: touch .env.production
+
       - name: 🔖 Set up Node
         uses: actions/setup-node@v1
         with:
