--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,40 +1,38 @@
-name: branch_check
-
-on:
-  push:
-    branches:
-      - '*'
-      - '!main'
+name: Reusable test workflow
 
 env:
   CI: true
   NODE_ENV: development
   PORT: 3000
   MONGODB_URL: mongodb://127.0.0.1:27017/test
-  LOCAL_MONGODB_URL: mongodb://127.0.0.1:27017/test
+  SKIP_PREFLIGHT_CHECK: true
+  REACT_APP_FIREBASE_API_KEY: asdf
+  REACT_APP_FIREBASE_AUTH_DOMAIN: asdf
+  REACT_APP_FIREBASE_PROJECT_ID: asdf
+  REACT_APP_FIREBASE_STORAGE_BUCKET: asdf
+  REACT_APP_FIREBASE_MESSAGING_SENDER_ID: asdf
+  REACT_APP_FIREBASE_APP_ID: asdf
+  REACT_APP_FIREBASE_MEASUREMENT_ID: asdf
+
+on:
+  workflow_call:
 
 jobs:
 
-  ci:
+  test:
     runs-on: ${{ matrix.os }}
-    env:
-      REACT_APP_FIREBASE_API_KEY: asdf
-      REACT_APP_FIREBASE_AUTH_DOMAIN: asdf
-      REACT_APP_FIREBASE_PROJECT_ID: asdf
-      REACT_APP_FIREBASE_STORAGE_BUCKET: asdf
-      REACT_APP_FIREBASE_MESSAGING_SENDER_ID: asdf
-      REACT_APP_FIREBASE_APP_ID: asdf
-      REACT_APP_FIREBASE_MEASUREMENT_ID: asdf
-      API_URL: asdf
     strategy:
       fail-fast: false
       matrix:
         node: ['16']
         os: [ubuntu-latest]
 
-    name: Node ${{ matrix.node }} on ${{ matrix.os }}
+    name: CI
     steps:
-      - name: Create mongoDB Docker container
+      - name: 🎯 Print OS and Node version
+        run: echo "Running on ${{ matrix.os }} with Node v${{ matrix.node }}"
+
+      - name: 🍃 Create mongoDB Docker container
         run: sudo docker run -d -p 27017:27017 mongo:latest
 
       - name: ♻️ Check out Git Repository
@@ -42,7 +40,7 @@ jobs:
         with:
           persist-credentials: false
 
-      - name: 🔖  Set up Node
+      - name: 🔖 Set up Node
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node }}
@@ -74,24 +72,18 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: 🐳 Publish to Docker Registry [Development]
-        uses: elgohr/Publish-Docker-Github-Action@master
-        with:
-          name: spencerlepine/woofer-dev
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
 
-    # services:
-    #   mongodb:
-    #       image: mongo
-    #       env:
-    #         MONGO_INITDB_ROOT_USERNAME: test
-    #         MONGO_INITDB_ROOT_PASSWORD: password
-    #         MONGO_INITDB_DATABASE: test
-    #       options: >-
-    #         --health-cmd mongo
-    #         --health-interval 10s
-    #         --health-timeout 5s
-    #         --health-retries 5
-    #       ports:
-    #         - 27017:27017
+        # services:
+        #   mongodb:
+        #       image: mongo
+        #       env:
+        #         MONGO_INITDB_ROOT_USERNAME: test
+        #         MONGO_INITDB_ROOT_PASSWORD: password
+        #         MONGO_INITDB_DATABASE: test
+        #       options: >-
+        #         --health-cmd mongo
+        #         --health-interval 10s
+        #         --health-timeout 5s
+        #         --health-retries 5
+        #       ports:
+        #         - 27017:27017
