--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,5 @@
 NODE_ENV=development
+SERVER_URL=http://localhost:8080/
 PORT=3000
 MONGODB_URL=mongodb://127.0.0.1:27017/test
 SKIP_PREFLIGHT_CHECK=true
