--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
+    "react-toastify": "^8.2.0",
     "style-loader": "^3.3.1",
     "web-vitals": "^2.1.4",
     "webpack-cli": "^4.9.2",
