--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   "scripts": {
     "start": "node server/src/index.js",
     "dev:server": "nodemon server/src/index.js",
-    "dev:client": "webpack serve --config ./webpack.dev.config.js",
-    "build": "webpack --config ./webpack.prod.config.js",
+    "dev:client": "webpack serve --config ./webpack.dev.config.js --env development --mode development",
+    "build": "webpack --config ./webpack.prod.config.js --env production --mode production",
     "lint": "eslint . --ext .js",
     "test": "jest --detectOpenHandles --runInBand --forceExit",
     "test:watch": "jest --onlyChanged --watch"
@@ -71,6 +71,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
+    "react-toastify": "^8.2.0",
     "style-loader": "^3.3.1",
     "web-vitals": "^2.1.4",
     "webpack-cli": "^4.9.2",
