--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "nodemon": "^2.0.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^5.2.0",
     "react-toastify": "^8.2.0",
     "style-loader": "^3.3.1",
