--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.21.4",
     "babel-loader": "^8.2.4",
+    "bulma": "^0.9.3",
     "compression": "^1.7.4",
     "compression-webpack-plugin": "^9.2.0",
     "cors": "^2.8.5",
@@ -73,6 +74,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.2.0",
     "react-toastify": "^8.2.0",
+    "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
     "web-vitals": "^2.1.4",
     "webpack-cli": "^4.9.2",
@@ -93,6 +95,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "html-loader": "^2.1.2",
     "husky": "^7.0.4",
+    "interpolate-html-plugin": "^4.0.0",
     "jest": "^26.6.3",
     "jest-watch-typeahead": "^0.6.5",
     "joi": "^17.6.0",
