publish DEV docker image on branches

--- a/.github/workflows/branch_check.yml
+++ b/.github/workflows/branch_check.yml
@@ -17,4 +17,4 @@ jobs:
     secrets:
       DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
       DOCKER_HUB_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
-      DOCKER_HUB_REPO: ${{ secrets.DOCKER_HUB_REPO }}
+      DOCKER_HUB_REPO: ${{ secrets.DOCKER_HUB_REPO_DEV }}
