create ssh docker EC2 deploy script

--- a/.github/workflows/branch_check.yml
+++ b/.github/workflows/branch_check.yml
@@ -18,3 +18,12 @@ jobs:
       DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
       DOCKER_HUB_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
       DOCKER_HUB_REPO: ${{ secrets.DOCKER_HUB_REPO_DEV }}
+
+  # TODO, remove this, just deploy for practice
+  deploy:
+    needs: [build]
+    uses: ./.github/workflows/deploy.yml
+    secrets:
+      DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
+      DOCKER_HUB_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
+      DOCKER_HUB_REPO: ${{ secrets.DOCKER_HUB_REPO }}
