--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,12 +21,29 @@ jobs:
         with:
           persist-credentials: false
 
-      - name: TODO
-        run: echo "TODO"
-      # - name: Deploy to EC2 Server
-      #   uses: easingthemes/ssh-deploy@main
-      #   env:
-      #     SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
-      #     REMOTE_HOST: ${{ secrets.HOST_DNS }}
-      #     REMOTE_USER: ${{ secrets.USERNAME }}
-      #     TARGET: ${{ secrets.TARGET_DIR }}
+      - name: Deploy to EC2 Server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.EC2_REMOTE_HOST }}
+          username: ${{ secrets.EC2_REMOTE_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          passphrase: ${{ secrets.EC2_PASSPHRASE }}
+          port: ${{ secrets.EC2_PORT }}
+          script_stop: true
+          script: |
+            GREEN='\033[0;32m'
+            NC='\033[0m' # No Color
+            echo -e "$GREEN Starting EC2 deployment script $NC"
+
+            echo "Stopping all running Docker Containers"
+            docker stop ${{ secrets.DOCKER_CONTAINER_NAME }}
+            docker rm ${{ secrets.DOCKER_CONTAINER_NAME }}
+            echo -e "$GREEN successfully stopped docker containers $NC \n"
+            echo "Docker containers now:"
+            docker container -ls
+
+            echo "Starting the new docker image"
+            docker run -d -p ${{ secrets.EC2_PORT }}:${{ secrets.EC2_PORT }} --name ${{ secrets.DOCKER_CONTAINER_NAME }} -t ${{ secrets.DOCKER_HUB_REPO }}:latest
+            echo -e "$GREEN Successfully started the docker image $NC \n"
+
+            echo -e "$GREEN EC2 deployment complete! $NC"
