update .env docker image reference

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     image: woofer
     container_name: woofer-app
     command: npm run start
+    env_file:
+      - ./.env
     ports:
       - "3000:3000"
     depends_on:
