--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,8 +58,8 @@ jobs:
         with:
           persist-credentials: false
 
-      - name: Create placeholder env file
-        run: touch .env.production
+      # - name: Create placeholder env file
+      #   run: touch .env
 
       - name: ⬇️  Install packages
         run: npm install
