--- a/.github/workflows/branch_check.yml
+++ b/.github/workflows/branch_check.yml
@@ -8,11 +8,11 @@ on:
 
 jobs:
 
-  test:
-    uses: ./.github/workflows/test.yml
+  # test: TODO
+  #   uses: ./.github/workflows/test.yml
 
   build:
-    needs: [test]
+    # needs: [test]
     uses: ./.github/workflows/build.yml
     secrets:
       DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
@@ -20,10 +20,10 @@ jobs:
       DOCKER_HUB_REPO: ${{ secrets.DOCKER_HUB_REPO }} ## TODO: _DEV
 
   # TODO, remove this, just deploy for practice
-  deploy:
-    needs: [build]
-    uses: ./.github/workflows/deploy.yml
-    secrets:
-      DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
-      DOCKER_HUB_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
-      DOCKER_HUB_REPO: ${{ secrets.DOCKER_HUB_REPO }}
+  # deploy:
+  #   needs: [build]
+  #   uses: ./.github/workflows/deploy.yml
+  #   secrets:
+  #     DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
+  #     DOCKER_HUB_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
+  #     DOCKER_HUB_REPO: ${{ secrets.DOCKER_HUB_REPO }}
