--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,7 +59,7 @@ jobs:
           persist-credentials: false
 
       - name: Create placeholder env file
-        run: touch .env.production
+        run: touch .env
 
       - name: ⬇️  Install packages
         run: npm install
