--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "start": "node server/src/index.js",
     "dev:server": "nodemon server/src/index.js",
     "dev:client": "webpack serve --config ./webpack.dev.config.js --env development --mode development",
-    "build": "webpack --config ./webpack.prod.config.js --env production --mode production",
+    "build": "webpack --config ./webpack.prod.config.js --mode production",
     "lint": "eslint . --ext .js",
     "test": "jest --detectOpenHandles --runInBand --forceExit",
     "test:watch": "jest --onlyChanged --watch"
