reference ENV_PRODUCTION repository secret in actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,7 +59,9 @@ jobs:
           persist-credentials: false
 
       - name: Create placeholder env file
-        run: touch .env.production
+        run: |
+          touch .env.production
+          echo ${{ secrets.ENV_PRODUCTION }} >> .env.production
 
       - name: ⬇️  Install packages
         run: npm install
