--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,8 @@ on:
         required: true
       DOCKER_HUB_REPO:
         required: true
+      ENV_VARS:
+        required: true
 
 jobs:
 
@@ -61,7 +63,7 @@ jobs:
       - name: Create placeholder env file
         run: |
           touch .env.production
-          echo ${{ secrets.ENV_PRODUCTION }} >> .env.production
+          echo ${{ secrets.ENV_VARS }} >> .env.production
 
       - name: ⬇️  Install packages
         run: npm install
