--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,8 +62,8 @@ jobs:
 
       - name: Create placeholder env file
         run: |
-          touch .env.production
-          echo ${{ secrets.ENV_VARS }} >> .env.production
+          touch .env
+          echo ${{ secrets.ENV_VARS }} >> .env
 
       - name: ⬇️  Install packages
         run: npm install
