--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,15 +3,13 @@ version: '3.9'
 services:
   server:
     build:
-      context: .
+      context: ./
       dockerfile: Dockerfile
     image: woofer
     container_name: woofer-app
     command: npm run start
     env_file:
-      - ./.env.production
-    volumes:
-      - /usr/src/app/node_modules
+      - ./.env
     ports:
       - "3000:3000"
     depends_on:
@@ -32,7 +30,6 @@ networks:
         driver: bridge
 
 volumes:
-    data-volume:
-    node_modules:
-    web-root:
-      driver: local
+  data-volume:
+  web-root:
+    driver: local
