--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,8 +9,6 @@ on:
         required: true
       DOCKER_HUB_REPO:
         required: true
-      ENV_VARS:
-        required: true
 
 jobs:
 
@@ -60,11 +58,6 @@ jobs:
         with:
           persist-credentials: false
 
-      - name: Create placeholder env file
-        run: |
-          touch .env
-          echo ${{ secrets.ENV_VARS }} >> .env
-
       - name: ⬇️  Install packages
         run: npm install
 
@@ -104,6 +97,11 @@ jobs:
 
     name: Verify Docker Image Runs
     steps:
+      - name: ♻️ Check out Git Repository
+        uses: actions/checkout@v2
+        with:
+          persist-credentials: false
+
       - name: Pull Docker Image
         run: |
           docker pull ${{ secrets.DOCKER_HUB_REPO }}:latest
