--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node: ['12, '14', '16']
+        node: ['12', '14', '16']
         os: [ubuntu-latest]
 
     name: CI
