pass down secrects for EC2 deploy workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,10 @@ on:
         required: true
       DOCKER_HUB_REPO:
         required: true
+      DOCKER_CONTAINER_NAME:
+        required: true
+      EC2_PORT:
+        required: true
 
 jobs:
 
