--- a/.github/workflows/branch_check.yml
+++ b/.github/workflows/branch_check.yml
@@ -27,3 +27,5 @@ jobs:
       DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
       DOCKER_HUB_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
       DOCKER_HUB_REPO: ${{ secrets.DOCKER_HUB_REPO_DEV }}
+      DOCKER_CONTAINER_NAME: ${{ secrets.DOCKER_CONTAINER_NAME }}
+      EC2_PORT: ${{ secrets.EC2_PORT }}
