--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,7 @@ jobs:
           node-version: ${{ matrix.node }}
 
       - name: Cache node modules
+        id: myCacheStep
         uses: actions/cache@v2
         env:
           cache-name: cache-node-modules
@@ -40,6 +41,7 @@ jobs:
             ${{ runner.os }}-
 
       - name: ⬇️  Install packages
+        if: steps.myCacheStep.outputs.cache-hit != 'true'
         run: npm install
 
       - name: 🏗 Build client files
@@ -58,7 +60,22 @@ jobs:
         with:
           persist-credentials: false
 
+      - name: Cache node modules
+        id: myCacheStep
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-node-modules
+        with:
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+
       - name: ⬇️  Install packages
+        if: steps.myCacheStep.outputs.cache-hit != 'true'
         run: npm install
 
       - name: 🔖 Set up Node
