rename npm cache in workflows

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
         id: myCacheStep
         uses: actions/cache@v2
         env:
-          cache-name: cache-node-modules
+          cache-name: node-modules-cache
         with:
           # npm cache files are stored in `~/.npm` on Linux/macOS
           path: ~/.npm
@@ -64,7 +64,7 @@ jobs:
         id: myCacheStep
         uses: actions/cache@v2
         env:
-          cache-name: cache-node-modules
+          cache-name: node-modules-cache
         with:
           # npm cache files are stored in `~/.npm` on Linux/macOS
           path: ~/.npm
